@@ -184,6 +184,9 @@ embeddings of $K$.
 \fun{GEN}{nf_get_roundG}{GEN nf} returns a rescaled version of $G$, rounded
 to nearest integers, specifically \tet{RM_round_maxrank}$(G)$.
 
+\fun{GEN}{nf_get_ramified_primes}{GEN nf} returns the vector of ramified
+primes.
+
 \fun{GEN}{nf_get_Tr}{GEN nf} returns the matrix of the Trace quadratic form
 on the basis $(w_1,\ldots,w_n)$: its $(i,j)$ entry is $\text{Tr} w_i w_j$.
 
