@@ -221,6 +221,7 @@ AP 81- [GP] central simple algebra package, GP functions
    87- [libpari] cb_pari_err_handle callback
    88- primes([-5,5]) -> [5] (spurious absolute values)
    89- matqr([;]) -> crash
+   90- [libpari] function nf_get_ramified_primes
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
